[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
octocrab = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }
once_cell = { workspace = true }
common = { path = "../common" }