[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
futures-util = { workspace = true }
octocrab = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
once_cell = { workspace = true }
