[package]
name = "job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
futures-util = { workspace = true }
headers = { workspace = true }
lambda_runtime = { workspace = true }
octocrab = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "fmt"] }
gix = { version = "0.63.0", features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
tokei = { workspace = true }
human_bytes = "0.4"
common = { path = "../common" }
rayon = "1.10.0"
